--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -1,51 +1,43 @@
-/* Full page layout */
-.balloon-page {
+.balloon-intro-page {
   position: relative;
   width: 1440px;
   height: 1024px;
-  margin: 0 auto;
-  background: #fff;
+  background: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* Top bar - split blue and orange */
 .header-bar {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 31px;
+  top: 0;
   display: flex;
 }
 
-.header-bar::before {
-  content: '';
+.blue-bar {
   width: 50%;
   background-color: #1B577E;
 }
 
-.header-bar::after {
-  content: '';
+.orange-bar {
   width: 50%;
   background-color: #EB5617;
 }
 
-/* Logo (top-left) */
 .logo-image {
   position: absolute;
-  width: 182px;
-  height: 160px;
-  left: 116px;
-  top: 69px;
+  width: 181.76px;
+  height: 160.19px;
+  left: 116.27px;
+  top: 68.99px;
   background-repeat: no-repeat;
   background-size: contain;
 }
 
-/* Watermark (center faded image) */
 .watermark-image {
   position: absolute;
-  width: 496px;
-  height: 437px;
+  width: 496.49px;
+  height: 437.58px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -54,76 +46,66 @@
   opacity: 0.5;
 }
 
-/* Main content box */
-.balloon-box {
+.intro-box {
   position: absolute;
-  width: 778px;
-  height: 811px;
+  width: 778.52px;
+  height: 510.86px;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) translateY(20.37px);
   border: 0.5px solid #2C51A1;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
   background: #fff;
-  padding: 40px;
-  box-sizing: border-box;
 }
 
-/* Title and rules */
-.status-text h2 {
+.intro-title {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: 34px;
   font-weight: 600;
   color: #EE581B;
-  margin-bottom: 20px;
   text-align: center;
 }
 
-.status-text h3 {
+.intro-description {
+  position: absolute;
+  width: 600.74px;
+  left: 50%;
+  top: 120px;
+  transform: translateX(-50%);
   font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 16px;
+  font-weight: 500;
   color: #333;
-  text-align: center;
-}
-
-.status-text ul {
-  font-size: 20px;
   line-height: 40px;
   text-align: justify;
-  color: #333;
-  padding-left: 20px;
 }
 
-/* Button */
-.button-group {
-  display: flex;
-  justify-content: center;
-  margin-top: 40px;
+.balloon-image {
+  position: absolute;
+  width: 207.18px;
+  height: 250.92px;
+  left: 412.02px;
+  top: 373.12px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.pump-button {
-  background-color: #1B5680;
+.start-button {
+  position: absolute;
+  width: 217.98px;
+  height: 42px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 762.39px;
+  background: #1B5680;
+  border-radius: 12px;
   color: #FEE9E7;
   font-size: 18px;
   font-weight: 700;
-  padding: 12px 24px;
-  border-radius: 12px;
-  cursor: pointer;
-  width: 220px;
   text-align: center;
-}
-
-/* balloon.png image styled exactly like Figma Desktop - 3 */
-.balloon-image {
-  position: absolute;
-  width: 106.37px;
-  height: 94.2px;
-  left: 423.5px;
-  top: 168.44px;
-  background: url('../assets/balloon.png'); /* ✅ Make sure this path is correct */
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  z-index: 2;
+  line-height: 42px;
+  cursor: pointer;
 }
